--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>{{title}}</title>
 
     <script language="JavaScript">
-        function send(form) {
+        function send(tipo) {
+            // Hacer algo con los datos del formulario
+            alert(tipo);
+
         }
     </script>
 
@@ -14,16 +17,15 @@
 
 <body>
     <div id="container">
+        
         <form id="form" name="form" action="/" method="post">
-            <div id="logo">{{title}}</div>
+            <h1><div id="logo">Operación Triunfo</div></h1>
+            <img src="resource/GAiLA2UWMAAhoDc.jpg" class="centered-image"></img>
             <div id="space"></div>
             <div id="form">
-                <button name="vote" value="{{button1}}" onclick="send()" class="button button1">{{button1}}</button>
-                <button name="vote" value="{{button2}}" onclick="send()" class="button button2">{{button2}}</button>
-                <button name="vote" value="reset" onclick="send()" class="button button3">Reset</button>
-                <div id="space"></div>
-                <div id="space"></div>
-                <div id="results"> {{button1}} - {{ value1 }} | {{button2}} - {{ value2 }} </div>
+                <button name="vote" value="1" onclick="send(1)" class="button button1">Voto a LUCAS</button>
+                <button name="vote" value="2" onclick="send(2)" class="button button2">Voto a SUZETE</button>
+
         </form>
     </div>
     </div>
