--- a/index.html
+++ b/index.html
@@ -1,34 +1,9 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <title>{{title}}</title>
-
-    <script language="JavaScript">
-        function send(tipo) {
-            // Hacer algo con los datos del formulario
-            alert(tipo);
-
-        }
-    </script>
-
-</head>
-
-<body>
-    <div id="container">
-        
-        <form id="form" name="form" action="/" method="post">
-            <h1><div id="logo">Operación Triunfo</div></h1>
-            <img src="resource/GAiLA2UWMAAhoDc.jpg" class="centered-image"></img>
-            <div id="space"></div>
-            <div id="form">
-                <button name="vote" value="1" onclick="send(1)" class="button button1">Voto a LUCAS</button>
-                <button name="vote" value="2" onclick="send(2)" class="button button2">Voto a SUZETE</button>
-
-        </form>
-    </div>
-    </div>
-</body>
-
+<!doctype html>
+<html>
+  <head>
+    <title>This is my docker website!</title>
+  </head>
+  <body>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
 </html>
